# ini_cpp

./: CMakeLists.txt  README.md  premake5.lua
docs/: CMakeLists.txt  Doxyfile.ini
include/INICPP/: INI.h
src/: INI.h  main.cpp
tests/: CMakeLists.txt
tests/src/: INITest.cpp  test.cpp
